plugins {
    id 'java'
    id 'io.spring.dependency-management'
}
tasks.named('jar') {
    enabled = true
}

dependencies {
    implementation libs.spring.boot.starter.web
    implementation libs.spring.boot.spring.doc
    implementation libs.spring.boot.starter.security
    implementation libs.spring.boot.starter.transactional
    implementation libs.lombok
    annotationProcessor libs.lombok
    testImplementation libs.spring.boot.starter.test
    testImplementation libs.database.h2

    implementation project(':main-modules:common')
    implementation project(':main-modules:profile:profile-domain')
    implementation project(':main-modules:user:user-application')
    implementation project(':main-modules:user:user-domain')
    implementation project(':main-modules:project:project-domain')
    implementation project(':main-modules:project:project-application')
    implementation project(':main-modules:skill:skill-domain')
    implementation project(':main-modules:skill:skill-application')
    implementation("org.springframework:spring-context")
    implementation("jakarta.validation:jakarta.validation-api:3.1.1")
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

